19 May 2010: Wouter
	- Fix resolution for domains like safesvc.com.cn.  If the iterator
	  can not recurse further and it finds the delegation in a state
	  where it would otherwise have rejected it outhand if so received
	  from a cache lookup, then it can try to ask higherup (with loop
	  protection).
	- Fix comments in iter_utils:dp_is_useless.

18 May 2010: Wouter
	- Fix various compiler warnings from the clang llvm compiler.
	- iana portlist updated.

6 May 2010: Wouter
	- Fix bug#308: spelling error in variable name in parser and lexer.

4 May 2010: Wouter
	- Fix dnssec-missing detection that was turned off by server selection.
	- Conforms to draft-ietf-dnsop-default-local-zones-13.  Added default
	  reverse lookup blocks for IPv4 test nets 100.51.198.in-addr.arpa,
	  113.0.203.in-addr.arpa and Orchid prefix 0.1.1.0.0.2.ip6.arpa.

29 April 2010: Wouter
	- Fix for dnssec lameness detection to use the key cache.
	- infra cache entries that are expired are wiped clean.  Previously
	  it was possible to not expire host data (if accessed often).

28 April 2010: Wouter
	- ldns tarball updated and GOST support is detected and then enabled. 
	- iana portlist updated.
	- Fix detection of gost support in ldns (reported by Chris Smith).

27 April 2010: Wouter
	- unbound-control get_option domain-insecure shows config file items.
	- fix retry sequence if prime hints are recursion-lame.
	- autotrust anchor file can be initialized with a ZSK key as well.
	- harden-referral-path does not result in failures due to max-depth.
	  You can increase the max-depth by adding numbers (' 0') after the
	  target-fetch-policy, this increases the depth to which is checked.

26 April 2010: Wouter
	- Compile fix using Sun Studio 12 compiler on Solaris 5.9, use
	  CPPFLAGS during configure process.
	- if libev is installed on the base system (not libevent), detect
	  it from the event.h header file and link with -lev.
	- configlexer.lex gets config.h, and configyyrename.h added by make,