@@ -1,3 +1,7 @@
+21 May 2010: Wouter
+	- EDNS timeout code will not fire if EDNS status already known.
+	- EDNS failure not stored if EDNS status known to work.
+
 19 May 2010: Wouter
 	- Fix resolution for domains like safesvc.com.cn.  If the iterator
 	  can not recurse further and it finds the delegation in a state
